--- a/README
+++ b/README
@@ -15,7 +15,7 @@
 - Open-source ethic responsible site-specific sustainable collaborative solidary cultural contemporary creativity development project.
 
 ## 2. CONTRIBUTIONS NEEDED:
-- Ecumenic Creative Operations Project (https://github.com/ecumenic/project) review and optimization.
+- Ecumenic Creative Operations Project (https://github.com/ecumenic/project) review and optimization including GitHub automation (https://github.com/collections/tools-for-open-source).
 - Ecumenic Creative Operations Documentation (https://github.com/ecumenic/documentation) review and optimization.
 - Project & its documentation translation to other multiple languages.
 - Other repository projects (https://github.com/ecumenic) review and optimization.
