--- a/README
+++ b/README
@@ -32,6 +32,9 @@ https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT
 Please refer to our 'CONTRACT' to understand how we work with pre-agreed paid services.
 https://github.com/ecumenic/project/blob/master/CONTRACT
 
+5.1. FORK PROJECTS:
+We do note hold responsability on any fork projects based partially on ours that not specifically on the Ecumenic Creative Operations repository. For any question related to that, please refer to our 'CONTRACT'.
+
 ## 6. PROJECT SPECIFICITIES:
 Please refer to the 'Ecumenic Creative Operations Project.odt' document itself.
 https://github.com/ecumenic/project/blob/master/ECO_Project.odt
@@ -44,19 +47,29 @@ https://github.com/ecumenic/project/blob/master/ECO_Project.odt
 - Fonts Typography by Ubuntu Design: https://design.ubuntu.com/font
 - Iconography by The Noun Project: https://www.thenounproject.com
 
-## 8. ADMINISTRATIVE BOARD:
+## 8. ORGANIZATION STRUCTURE:
+We structure our corporate governance devops through systemic reliability engineering.
+https://en.wikipedia.org/wiki/Corporate_governance
+https://en.wikipedia.org/wiki/DevOps
+https://en.wikipedia.org/wiki/Reliability_engineering
 
-- Operário Ribeiro
+8.1. ADMNISTRATIVE BOARD: Decision-Making, Policies & Projects Analysis & Proposition, Development.
+Operário Ribeiro
 https://www.linkedin.com/in/operarioribeiro
 
-## 9. DEVELOPMENT COMMUNITY:
-http://github.com/ecumenic
+8.2. GOVERNANCE BOARD: Policies & Projects Analysis & Proposition, Development.
 
-## 10. LICENCE: 
+8.3. DEVELOPMENT BOARD: Policies Proposition, Projects Analysis & Proposition, Development.
+
+8.4. COLLABORATION BOARD: Policies & Projects Proposition, Development.
+
+8.5. COMMUNITY: Policies & Projects Proposition Through Open Polls.
+
+## 9. LICENCE: 
 Please refer to our project 'LICENSE' link below.
 https://github.com/ecumenic/project/blob/master/LICENSE
 
-## 11. CONTACT:
+## 10. CONTACT:
 ecumenic@protonmail.com
 
 # ◇
