--- a/README
+++ b/README
@@ -11,7 +11,9 @@
 # ◇
 
 ## 1. PROJECT: 
-- Open-source ethic responsible site-specific sustainable collaborative solidary cultural contemporary creativity development project.
+- Open-source non-political apartisan ethic responsible site-specific sustainable collaborative solidary cultural contemporary creativity development project.
+
+1.1. OUR LOGO: A Roerich Pact peacebuilding culture emblem inside a Geneva Protocol III ecumenic assistance emblem above the United Nations union work olive branches.
 
 ## 2. CONTRIBUTIONS NEEDED:
 - Ecumenic Creative Operations Project (https://github.com/ecumenic/project) review and optimization including GitHub automation (https://github.com/collections/tools-for-open-source).
