--- a/README
+++ b/README
@@ -73,4 +73,9 @@ https://github.com/ecumenic/project/blob/master/LICENSE
 ## 10. CONTACT:
 ecumenic@protonmail.com
 
+## 11. DONATIONS
+- Donorbox: https://donorbox.org/ecumenic 
+- Faircoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9
+
+
 # ◇
