--- a/README
+++ b/README
@@ -73,7 +73,7 @@ https://github.com/ecumenic/project/blob/master/LICENSE
 ## 10. CONTACT:
 ecumenic@protonmail.com
 
-## 11. DONATIONS
+## 11. DONATIONS:
 - Donorbox: https://donorbox.org/ecumenic 
 - Faircoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9
 
