--- a/README
+++ b/README
@@ -66,6 +66,8 @@ https://www.linkedin.com/in/operarioribeiro
 
 8.5. COMMUNITY: Policies & Projects Proposition Through Open Polls.
 
+8.6. THIRD-PARTIES LIABILITY: In order to keep our free open-source consultancy instances we currently hold no official forking support nor hold official ties to any specific religious denomination.
+
 ## 9. LICENCE: 
 Please refer to our project 'LICENSE' link below.
 https://github.com/ecumenic/project/blob/master/LICENSE
@@ -73,7 +75,7 @@ https://github.com/ecumenic/project/blob/master/LICENSE
 ## 10. CONTACT:
 ecumenic@protonmail.com
 
-## 11. DONATIONS:
+## 11. DONATIONS
 - Donorbox: https://donorbox.org/ecumenic 
 - Faircoin: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9
 
